removed tweet img on  small screens

--- a/flask_app/Static/style.css
+++ b/flask_app/Static/style.css
@@ -267,6 +267,12 @@ html {
 }
 
 @media only screen and (max-width: 450px)  {
+
+    .tweet_img {
+        display: none;
+    }
+
+    
     #phone-home-button {
         display: block;
     }
