--- a/flask_app/Templates/official.html
+++ b/flask_app/Templates/official.html
@@ -149,7 +149,7 @@
                                 </div>
                             </div>
                             {% for image in post_images[post.id] %}
-                            <img src="{{image['image_url']}}" alt="">
+                            <img src="{{image['image_url']}}" alt="" class="tweet_img">
                             {% endfor %}
                         </div>
                     </a>
@@ -160,7 +160,7 @@
             </div>
             
             <div class="official_right_div">
-                <a href="../" class="link-light">
+                <a href="../" class="link-light" id="official-home-button">
                     <button class="btn btn-success btn-lg official-button">
                             Home
                         </button>
@@ -248,9 +248,6 @@
                 </div>
                 {% endif %}
             </div>
-            <button class="btn btn-success" style="display: none;" id="phone-toggle">
-                test
-            </button>
             <div class="official_user_info text-light" id="phone_left_div">
                 <div class="mt-3 official_contact_info">
                     <div>
