--- a/flask_app/Templates/search.html
+++ b/flask_app/Templates/search.html
@@ -34,7 +34,7 @@
                     </h2>
                 </div>
                 
-                <div class="state-page-dropdowns">
+                <div class="search-page-dropdowns">
                     <div class="dropdown my_dropdown">
                         <button class="btn btn-success btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Select new state
