--- a/flask_app/templates/official.html
+++ b/flask_app/templates/official.html
@@ -76,7 +76,7 @@
             <div class="official_header mt-3">
                 <h1>
                     <span>{{official.first_name}}</span>
-                    <span>{{official.last_name}}</span>'s stance on palestine
+                    <span>{{official.last_name}}</span>'s stance on Palestine
                 </h1>
                 <!-- Add this dropdown button somewhere in your HTML, preferably above the post cards -->
                 <div class="official_header_dropdowns">
