--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -30,7 +30,7 @@
                         Welcome to Congress on Palestine, an archive for tracking congress members' recent stances on Palestine. Stay informed about their positions and easily find their contact information to let them know how you feel.
                     </h2>
                     <h2>
-                        Search for your representatives by state or by name name directly.
+                        Search for your representatives by state or by name directly.
                     </h2>
                 </div>
                 
@@ -51,7 +51,7 @@
                     </div>
                     <div class="dropdown my_dropdown">
                         <button class="btn btn-success btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Find Officials
+                            Find officials
                         </button>
                         <div id="official_dropdown">
                             
