--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -8,7 +8,7 @@
 <body>
     <!-- login page -->
 
-    <form action="" method="post">
+    <form action="/validate_login" method="post">
         <p>
             <label for="username">Username:</label>
             <input type="text" name="username" id="username">
@@ -20,7 +20,7 @@
         <input type="submit" value="Log In">
 
     </form>
-    <form action="" method="post">
+    <form action="/register" method="post">
         <p>
             <label for="username">Username:</label>
             <input type="text" name="username" id="username">
@@ -31,7 +31,7 @@
         </p>
         <p>
             <label for="password">Confirm Password:</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="confirm_password" id="confirm_password">
         </p>
         <input type="submit" value="Sign Up">
 </body>
