--- a/flask_app/templates/noComment.html
+++ b/flask_app/templates/noComment.html
@@ -68,7 +68,7 @@
                         {% if official.twitter_account %}
                         <span>They do have a twitter account, but may not post regularly. Please check their other social media account. I hope to be able collect post from other platforms other that twitter at some point.</span>
                         {% else %}
-                        <span>They're twitter account is not in our system, but feel free to check their other social media account. I hope to be able collect post from other platforms other that twitter at some point.</span>
+                        <span>Their twitter account is not in our system, but feel free to check their other social media account. I hope to be able collect post from other platforms other that twitter at some point.</span>
                         {% endif %}
                     </h2>
 
