--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>congress on palestine 2023</title>
 </head>
 <body>
     <!-- login page -->
