--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>congress on palestine 2023</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -27,8 +27,9 @@
                 
                 <div class="text-success mt-5">
                     <h2>
-                        Welcome to Congress on Palestine, an archive for tracking congress members' recent stances on Palestine. Stay informed about their positions and easily find their contact information to let them know how you feel.
+                        Welcome to Congress on Palestine, an archive for tracking congress members' recent stances on Palestine throughout 2023. Find out if your representative has called for a cease fire or remained silent. Easily find their contact information to let them know how you feel.
                     </h2>
+                    <br/>
                     <h2>
                         Search for your representatives by state or by name directly.
                     </h2>
@@ -59,7 +60,7 @@
                                 <input type="text" placeholder="Search.." id="official_input" onkeyup="filterFunction('official_dropdown', 'official_input')">
                                 
                                 {% for official in officials %}
-                                <li><a class="dropdown-item" href="officials/{{official.id}}">{{official.first_name}} {{official.last_name}}</a></li>
+                                <li><a class="dropdown-item" href="../officials/{{official.id}}">{{official.first_name}} {{official.last_name}}</a></li>
                                 {% endfor %}
                             </ul>
                         </div>
