Committing local changes to search.html

--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -27,8 +27,9 @@
                 
                 <div class="text-success mt-5">
                     <h2>
-                        Welcome to Congress on Palestine, an archive for tracking congress members' recent stances on Palestine. Stay informed about their positions and easily find their contact information to let them know how you feel.
+                        Welcome to Congress on Palestine, an archive for tracking congress members' recent stances on Palestine throughout 2023. Find out if they have called for a cease fire or remained slient. Easily find their contact information to let them know how you feel.
                     </h2>
+		    <br/>
                     <h2>
                         Search for your representatives by state or by name directly.
                     </h2>
