--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -20,7 +20,7 @@
         <input type="submit" value="Log In">
 
     </form>
-    <form action="/register" method="post">
+    <!-- <form action="/register" method="post">
         <p>
             <label for="username">Username:</label>
             <input type="text" name="username" id="username">
@@ -33,6 +33,6 @@
             <label for="password">Confirm Password:</label>
             <input type="password" name="confirm_password" id="confirm_password">
         </p>
-        <input type="submit" value="Sign Up">
+        <input type="submit" value="Sign Up"> -->
 </body>
 </html>
